[package]
name = "dag-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust library for working with Directed Acyclic Graphs (DAGs)"
repository = "https://github.com/1eedaegon/dag-rs"
# keywords = ["dag", "graph", "directed", "acyclic", "topological"]
# categories = ["data-structures", "algorithms"]

[dependencies]
